--- a/index.html
+++ b/index.html
@@ -8,29 +8,76 @@
   <title>Frontend Mentor | FAQ accordion</title>
 </head>
 <body>
+    <div class="container">
+        <div class="faq-headline">
+            <img src="assets/images/icon-star.svg" alt="">
+            <h1>FAQs</h1>
+        </div>
+        <div class="accordion-container">
+            <div class="accordion-item">
+                <button id="accordion-btn" class="accordion-btn">What is Frontend Mentor, and how will it help me?
+                    <div class="icons">
+                        <img class="plus-icon btn-icon" src="assets/images/icon-plus.svg">
+                        <img  class="minus-icon btn-icon" src="assets/images/icon-minus.svg">
+                    </div>
+                </button>
+                <div class="accordion-description">
+                    <p>Frontend Mentor offers realistic coding challenges to help developers improve their 
+                        frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
+                        all levels and ideal for portfolio building.</p>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <button id="accordion-btn" class="accordion-btn">Is Frontend Mentor free?
+                    <div class="icons">
+                        <img class="plus-icon btn-icon" src="assets/images/icon-plus.svg">
+                        <img  class="minus-icon btn-icon" src="assets/images/icon-minus.svg">
+                    </div>
+                </button>
+                <div class="accordion-description">
+                    <p>Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
+                        option providing access to a range of projects suitable for all skill levels.</p>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <button id="accordion-btn" class="accordion-btn">Can I use Frontend Mentor projects in my portfolio?
+                    <div class="icons">
+                        <img class="plus-icon btn-icon" src="assets/images/icon-plus.svg">
+                        <img  class="minus-icon btn-icon" src="assets/images/icon-minus.svg">
+                    </div>
+                </button>
+                <div class="accordion-description">
+                    <p>Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
+                        way to showcase your skills to potential employers!</p>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <button id="accordion-btn" class="accordion-btn">How can I get help if I'm stuck on a Frontend Mentor challenge?
+                    <div class="icons">
+                        <img class="plus-icon btn-icon" src="assets/images/icon-plus.svg">
+                        <img  class="minus-icon btn-icon" src="assets/images/icon-minus.svg">
+                    </div>
+                </button>
+                <div class="accordion-description">
+                    <p>The best place to get help is inside Frontend Mentor's Discord community. There's a help 
+                        channel where you can ask questions and seek support from other community members.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
-  FAQs
 
-  What is Frontend Mentor, and how will it help me?
-
-  Frontend Mentor offers realistic coding challenges to help developers improve their 
-  frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
-  all levels and ideal for portfolio building.
-
-  Is Frontend Mentor free?
-
-  Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
-  option providing access to a range of projects suitable for all skill levels.
-
-  Can I use Frontend Mentor projects in my portfolio?
-
-  Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
-  way to showcase your skills to potential employers!
-
-  How can I get help if I'm stuck on a Frontend Mentor challenge?
   
-  The best place to get help is inside Frontend Mentor's Discord community. There's a help 
-  channel where you can ask questions and seek support from other community members.
+
+  
+
+  
+
+  
+
+  
+  
+  
 
   
   <div class="attribution">
