--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="accordion-container">
             <div class="accordion-item">
-                <button id="accordion-btn" class="accordion-btn">What is Frontend Mentor, and how will it help me?
+                <button class="accordion-btn">What is Frontend Mentor, and how will it help me?
                     <div class="icons">
                         <img class="plus-icon btn-icon" src="assets/images/icon-plus.svg">
                         <img  class="minus-icon btn-icon" src="assets/images/icon-minus.svg">
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="accordion-item">
-                <button id="accordion-btn" class="accordion-btn">Is Frontend Mentor free?
+                <button class="accordion-btn">Is Frontend Mentor free?
                     <div class="icons">
                         <img class="plus-icon btn-icon" src="assets/images/icon-plus.svg">
                         <img  class="minus-icon btn-icon" src="assets/images/icon-minus.svg">
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="accordion-item">
-                <button id="accordion-btn" class="accordion-btn">Can I use Frontend Mentor projects in my portfolio?
+                <button class="accordion-btn">Can I use Frontend Mentor projects in my portfolio?
                     <div class="icons">
                         <img class="plus-icon btn-icon" src="assets/images/icon-plus.svg">
                         <img  class="minus-icon btn-icon" src="assets/images/icon-minus.svg">
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="accordion-item">
-                <button id="accordion-btn" class="accordion-btn">How can I get help if I'm stuck on a Frontend Mentor challenge?
+                <button class="accordion-btn">How can I get help if I'm stuck on a Frontend Mentor challenge?
                     <div class="icons">
                         <img class="plus-icon btn-icon" src="assets/images/icon-plus.svg">
                         <img  class="minus-icon btn-icon" src="assets/images/icon-minus.svg">
@@ -65,25 +65,10 @@
             </div>
         </div>
     </div>
-
-
-  
-
-  
-
-  
-
-  
-
-  
-  
-  
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-  <script src="scripts.js"></script>
+        <div class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+            Coded by <a href="https://davidrmcintyre.github.io/portfolio/" target="_blank">David McIntyre</a>.
+        </div>
+<script src="scripts.js"></script>
 </body>
 </html>
